<?xml version="1.0"?>
<package format="2">
    <name>nturt_state_controller</name>
    <version>0.0.0</version>
    <description>The nturt_state_controller package</description>
    <maintainer email="a891021960035@gmail.com">AlexKao</maintainer>
    <license>TODO</license>

    <!-- build depency -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>can_msgs</build_depend>
    <build_depend>nturt_can_parser</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <!-- <build_depend>wiringPi</build_depend> -->
    <build_export_depend>can_msgs</build_export_depend>
    <build_export_depend>nturt_can_parser</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <!-- execute depency -->
    <exec_depend>can_msgs</exec_depend>
    <exec_depend>nturt_can_parser</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <!-- <exec_depend>wiringPi</exec_depend> -->
</package>
