<?xml version="1.0"?>
<package format="2">
    <name>nturt_state_controller</name>
    <version>0.0.0</version>
    <description>The nturt_state_controller package</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <author email="a891021960035@gmail.com">AlexKao</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>nturt_ros_interface</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>nturt_ros_interface</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <!-- execute dependencise -->
    <exec_depend>nturt_ros_interface</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
